# hailo-rpi5-examples

./: download_resources.sh
basic_pipelines/: pose_estimation_pipeline.py
community_projects/Navigaitor/: README.md  poetry.lock.orig  pyproject.toml  pyproject.toml.orig
community_projects/Navigaitor/server/: main.py  move.py
community_projects/Navigaitor/server/templates/: keypress.html
community_projects/Navigaitor/xfeat/: hailo_demo.py
community_projects/TEMPO/: app_hailo.py
community_projects/dynamic_captioning/: README.md  caption.py  requirements.txt
cpp/: yolov8pose_postprocess.cpp
