[tool.poetry]
name = "navigaitor-server"
version = "0.1.0"
description = ""
authors = ["Navigaitor Team <navigaitor@hailo.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
smbus = "^1.1.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
